kubia-manual.yaml
apiVersion: v1               
kind: Pod                    
metadata:
  name: kubia-manual         
spec:
  containers:
  - image: luksa/kubia       
    name: kubia              
    ports:
    - containerPort: 8080    
      protocol: TCP
